manifests/prod/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: eplastbackend
  labels:
    app: eplastbackend  
spec:
  selector:
    matchLabels:
      app: eplastbackend
  replicas: 1
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: eplastbackend 
    spec:
      containers:
        - name: eplastbackend 
          image: ___containerRegistry___/eplastbackend:10286
          resources:
            limits:
              cpu: "500m"
              memory: "1000Mi"
            requests:
              cpu: "250m"
              memory: "500Mi"   
          ports:
          - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
    name: eplastbackend
spec:
    type: ClusterIP
    ports:
    - port: 5000 
    selector:
        app: eplastbackend
