manifests/prod/ingress-argocd.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: argocd
  name: routing-for-argocd
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
      - eplastprd.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: eplastprd.westeurope.cloudapp.azure.com
    http:
      paths:
      - path: /argocd
        pathType: Prefix
        backend:
         service:
           name: argocd-server
           port:
             number: 80
