manifests/prod/ingress-monitoring.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: routing-for-monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
    # nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/proxy-body-size: "20m"
spec:
  tls:
  - hosts:
      - eplastprd.westeurope.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: eplastprd.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-grafana
            port:
              number: 80
        path: /grafana
        pathType: Prefix
      - backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
        path: /prometheus
        pathType: Prefix
      - backend:
          service:
            name: prometheus-stack-kube-prom-alertmanager
            port:
              number:9093
        path: /alerts
        pathType: Prefix
      - backend:
          service:
            name: loki
            port:
              number: 3100
        path: /loki
        pathType: Prefix
